--- a/ulearn/theme/portlets/subscribednews/subscribednews.css
+++ b/ulearn/theme/portlets/subscribednews/subscribednews.css
@@ -8,7 +8,7 @@
 
 .portlet-subscribed-news {
   background-color: white;
-  box-shadow: -1px 1px 2px #ddd;
+  border: 1px solid #ddd;
   clear: both;
   margin-bottom: 20px;
   position: relative;
@@ -28,9 +28,13 @@
     width: 100%;
 }
 
+li.noticies.clearfix:last-child {
+  border: none;
+}
+
 .portlet-subscribed-news .text_noticia > p{
   margin-top:0px;
-  min-height: 44px;
+  min-height: 50px;
 }
 
 .portlet-subscribed-news .noticies.clearfix::before {
