--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1790,7 +1790,7 @@ border-radius: 0;
 }
 @media only screen and (max-width: 1050px) {
   #searchinputusers .inputsearchUsers .searchInput {
-  max-width: 195px;
+  max-width: 100%;
 }
 }
 @media only screen and (max-width: 800px) {
@@ -1949,7 +1949,7 @@ border-radius: 0;
     height: auto;
     margin-bottom: 15px;
     margin-right: 0;
-    width: 100%;
+    width: 100% !important;
 }
 .noticies .newsImage {
     float: left;
@@ -1960,6 +1960,7 @@ border-radius: 0;
 }
 .text_noticia {
     margin-left: 0;
+    float:none !important;
 }
 .social {
     margin-bottom: 20px;
@@ -2036,7 +2037,13 @@ display: none;
 #communitysearch h2 {
   padding-left: 0;
 }
+.portlet-subscribed-news .list-search-portlet li {
+  padding-left: 0px;
 }
+
+}
+
+
 @media only screen and (max-width: 979px) and (min-width: 768px) and (orientation: portrait) {
 .row-fluid .span3, #dashboard .span3, .fila .span3, .template-atct_album_view #content-core .span3, .row-fluid #dashboard-portlets1, #dashboard #dashboard-portlets1, .fila #dashboard-portlets1, .template-atct_album_view #content-core #dashboard-portlets1, .row-fluid #dashboard-portlets2, #dashboard #dashboard-portlets2, .fila #dashboard-portlets2, .template-atct_album_view #content-core #dashboard-portlets2, .row-fluid #dashboard-portlets3, #dashboard #dashboard-portlets3, .fila #dashboard-portlets3, .template-atct_album_view #content-core #dashboard-portlets3, .row-fluid #dashboard-portlets4, #dashboard #dashboard-portlets4, .fila #dashboard-portlets4, .template-atct_album_view #content-core #dashboard-portlets4, .row-fluid .w1\3a 4, #dashboard .w1\3a 4, .fila .w1\3a 4, .template-atct_album_view #content-core .w1\3a 4, .row-fluid .photoAlbumEntry, #dashboard .photoAlbumEntry, .fila .photoAlbumEntry, .template-atct_album_view #content-core .photoAlbumEntry {
     width: 100%;
