--- a/ulearn/theme/scss/dynamic.scss
+++ b/ulearn/theme/scss/dynamic.scss
@@ -323,3 +323,7 @@ i.shared_icon {
     font-size: 25px;
     padding-right: 20px;
 }
+
+.portlet-noticies .category {
+  background-color: $main-color;
+}
